salesfoceround/force-app/main/default/objects/Round__c/fields/TerminodosJogos__c.field-meta.xml
<CustomField>
    <fullName>TerminodosJogos__c</fullName>
    <description>Data de términos dos jogos</description>
    <inlineHelpText>Data de términos dos jogos</inlineHelpText>
    <label>Término dos Jogos</label>
    <type>Date</type>
</CustomField>