salesfoceround/force-app/main/default/objects/Round__c/fields/VotosParar__c.field-meta.xml
<CustomField>
    <fullName>VotosParar__c</fullName>
    <label>Votos Parar</label>
    <summaryFilterItems>
        <field>Jogador__c.RetornaJogo__c</field>
        <operation>equals</operation>
        <value>Não</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Jogador__c.Eliminado__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Jogador__c.Round__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>