salesfoceround/force-app/main/default/objects/Round__c/fields/VotosProsseguir__c.field-meta.xml
<CustomField>
    <fullName>VotosProsseguir__c</fullName>
    <description>Contagem dos jogadores que votaram para prosseguir.</description>
    <label>Votos Prosseguir</label>
    <summaryFilterItems>
        <field>Jogador__c.RetornaJogo__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Jogador__c.Eliminado__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Jogador__c.Round__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>